--- a/Day002/作業_題目Hong.ipynb
+++ b/Day002/作業_題目Hong.ipynb
@@ -39,35 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "id": "kLjyVid_JpIC"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  5, 10, 15, 20, 25],\n",
-       "       [ 1,  6, 11, 16, 21, 26],\n",
-       "       [ 2,  7, 12, 17, 22, 27],\n",
-       "       [ 3,  8, 13, 18, 23, 28],\n",
-       "       [ 4,  9, 14, 19, 24, 29]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#1.將下列清單(list1)，轉成維度為(5X6)的array，順序按 row 填充。(hint:order=\"F\")\n",
-    "array1 = np.array(range(30))\n",
-    "array1.reshape((5, 6), order='F')"
+    "array1 = np.array(range(30))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +64,7 @@
        "       [24, 25, 26, 27, 28, 29]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +75,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  5, 10, 15, 20, 25],\n",
+       "       [ 1,  6, 11, 16, 21, 26],\n",
+       "       [ 2,  7, 12, 17, 22, 27],\n",
+       "       [ 3,  8, 13, 18, 23, 28],\n",
+       "       [ 4,  9, 14, 19, 24, 29]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order_arr = array1.reshape((5, 6), order='F')\n",
+    "order_arr  # 原陣列不會被取代，記得建立一個新的"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "id": "X1PZ16iqXWOe"
    },
@@ -99,17 +108,17 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 1,  7, 13, 19, 25]),)"
+       "(array([0, 1, 2, 3, 4]), array([5, 0, 1, 2, 3]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#2.呈上題的 array，找出被 6 除餘 1 的數的索引\n",
-    "np.where(array1 % 6 == 1)"
+    "np.where(order_arr % 6 == 1)"
    ]
   }
  ],
