--- a/Day003/作業_Hong題目.ipynb
+++ b/Day003/作業_Hong題目.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "id": "knBzIEbisYO_"
    },
@@ -47,10 +47,10 @@
     {
      "data": {
       "text/plain": [
-       "66.11730721041445"
+       "60.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
     "#1. 正常的談話的聲壓為20000微巴斯卡，請問多少分貝?\n",
     "V1 = 20000\n",
     "V0 = 20\n",
-    "gb = 20 * np.log10(V1)/np.log10(V0)\n",
+    "gb = 20 * np.log10(V1/V0)\n",
     "gb"
    ]
   },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "id": "LjGnv4Q-1t7u"
    },
@@ -85,42 +85,41 @@
     {
      "data": {
       "text/plain": [
-       "(1.9515449934959719, 3.252574989159953)"
+       "0.09999999999999999"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 30 = 20 * np.log10(V1)/np.log10(20)\n",
-    "# 50 = 20 * np.log10(V1)/np.log10(20)  log10(100) = 2  V1=np.power(10, 2)=100\n",
-    "gb30_log = 30 / 20 * np.log10(20)\n",
-    "gb50_log = 50 / 20 * np.log10(20)\n",
-    "gb30_log, gb50_log"
+    "# 30 = 20 * np.log10(30/20) => np.log10(30/20) = 30/20 => 30=10**(30/20)*20\n",
+    "# 50 = 20 * np.log10(50/20)\n",
+    "\n",
+    "V1_30 = 10**(30/20)*20\n",
+    "V1_50 = 10**(50/20)*20\n",
+    "V1_30/V1_50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.04999999999999999"
+       "632.4555320336758"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "V1_30gb = np.power(10, gb30_log)\n",
-    "V1_50gb = np.power(10, gb50_log)\n",
-    "V1_30gb/V1_50gb"
+    "(10**(30/20))*20"
    ]
   }
  ],
