--- a/Day005/作業Hong題目.ipynb
+++ b/Day005/作業Hong題目.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {
     "executionInfo": {
      "elapsed": 617,
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {
     "executionInfo": {
      "elapsed": 1016,
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "(67.16666666666667, nan, 75.33333333333333)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
@@ -144,10 +144,10 @@
     {
      "data": {
       "text/plain": [
-       "(67.16666666666667, 64.66666666666667, 75.33333333333333)"
+       "(67.16666666666667, 66.6, 75.33333333333333)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -179,7 +179,7 @@
        "(48, 60.0, 65)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "(89, 85.0, 90)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "(13.433995020924426, 9.707728879609279, 8.825468196582484)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,6 +242,28 @@
     "std_math = np.nanstd(math_score)\n",
     "std_chi = np.std(chinese_score)\n",
     "std_eng, std_math, std_chi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "數學： 平均 66.6, 最大 85.0, 最小 60.0, 標準差 9.707728879609279\n",
+      "國文： 平均 75.33333333333333, 最大 90, 最小 65, 標準差 8.825468196582484\n",
+      "英文： 平均 67.16666666666667, 最大 89, 最小 48, 標準差 13.433995020924426\n"
+     ]
+    }
+   ],
+   "source": [
+    "# まとめ\n",
+    "print(f'數學： 平均 {avg_math}, 最大 {max_math}, 最小 {min_math}, 標準差 {std_math}')\n",
+    "print(f'國文： 平均 {avg_chi}, 最大 {max_chi}, 最小 {min_chi}, 標準差 {std_chi}')\n",
+    "print(f'英文： 平均 {avg_eng}, 最大 {max_eng}, 最小 {min_eng}, 標準差 {std_eng}')"
    ]
   },
   {
