--- a/Day006/作業Hong題目.ipynb
+++ b/Day006/作業Hong題目.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "['arr_0', 'arr_1']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +108,38 @@
    "source": [
     "print(npzfile['arr_0'])\n",
     "print(npzfile['arr_1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_array = np.load('HW.npz')\n",
+    "array3 = np.array([[4,5,6],[1,2,3]])\n",
+    "np.savez('HW.npz',load_array['arr_0'],load_array['arr_1'],array3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['arr_0', 'arr_1', 'arr_2']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_array = np.load('HW.npz')\n",
+    "load_array.files  # 覆寫"
    ]
   }
  ],
