--- a/Day007/範例程式.ipynb
+++ b/Day007/範例程式.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "<img width=150 src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/NumPy_logo.svg/200px-NumPy_logo.svg.png\"></img>\n",
     "\n",
-    "# Part.2-1-07 NumPy 的矩陣函式與線性代數應用"
+    "# NumPy 的矩陣函式與線性代數應用"
    ]
   },
   {
