--- a/Day016/作業題目.ipynb
+++ b/Day016/作業題目.ipynb
@@ -6,10 +6,10 @@
     "id": "b0CqLhJh2s7b"
    },
    "source": [
-    "作業目標:<br>\r\n",
-    "1. 熟悉時間序列資料運算\r\n",
-    "2. 敘述統計量應用在時間序列資料上\r\n",
-    "\r\n"
+    "作業目標:<br>\n",
+    "1. 熟悉時間序列資料運算\n",
+    "2. 敘述統計量應用在時間序列資料上\n",
+    "\n"
    ]
   },
   {
@@ -18,8 +18,8 @@
     "id": "RVN7uazcbsex"
    },
    "source": [
-    "作業重點:<br>\r\n",
-    "1. 須注意時間的間隔問題，例如:一周、一年...\r\n",
+    "作業重點:<br>\n",
+    "1. 須注意時間的間隔問題，例如:一周、一年...\n",
     "2. 敘述統計量一樣可以應用在時間序列資料上"
    ]
   },
@@ -29,17 +29,17 @@
     "id": "xiYCa02a2vRm"
    },
    "source": [
-    "題目 : 運下列時間序列資料做運算<br>\r\n",
-    "\r\n",
-    "\r\n",
-    "```\r\n",
-    "index = pd.date_range(\"1/1/2019\", periods=20, freq='D')\r\n",
-    "series = pd.Series(range(20), index=index)\r\n",
-    "```\r\n",
-    "\r",
+    "題目 : 運下列時間序列資料做運算<br>\n",
+    "\n",
+    "\n",
+    "```\n",
+    "index = pd.date_range(\"1/1/2019\", periods=20, freq='D')\n",
+    "series = pd.Series(range(20), index=index)\n",
+    "```\n",
+    "\n",
     "資料\n",
-    "\r\n",
-    "1. 將所有轉為周資料\r\n",
+    "\n",
+    "1. 將所有轉為周資料\n",
     "2. 將周資料的值取平均"
    ]
   },
@@ -97,16 +97,16 @@
     }
    ],
    "source": [
-    "import numpy as np\r\n",
-    "import pandas as pd\r\n",
-    "index = pd.date_range('1/1/2019', periods=20, freq='D')\r\n",
-    "series = pd.Series(range(20), index=index)\r\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "index = pd.date_range('1/1/2019', periods=20, freq='D')\n",
+    "series = pd.Series(range(20), index=index)\n",
     "series"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 1367,
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 1355,
@@ -199,7 +199,10 @@
     {
      "data": {
       "text/plain": [
-       "9.5"
+       "2018-12-31/2019-01-06     2.5\n",
+       "2019-01-07/2019-01-13     9.0\n",
+       "2019-01-14/2019-01-20    16.0\n",
+       "Freq: W-SUN, dtype: float64"
       ]
      },
      "execution_count": 6,
@@ -208,7 +211,7 @@
     }
    ],
    "source": [
-    "series_week.mean()"
+    "series_week.resample('W').mean()"
    ]
   }
  ],
@@ -234,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
