--- a/Day017/作業.md
+++ b/Day017/作業.md
@@ -9,3 +9,9 @@
 
 * 將資料型態 downcast
 * e.g. 將 `int64` -> `uint16` (儲存空間差4倍), `float64` -> `float32` (差2倍)
+
+
+### ANSWER
+1. 先檢查有沒有使用到自訂義的函數，如果有可以查詢pandas中是否有支援相關演算法，如果以上都沒辦法改善，那可以從資料讀取方式下手，將要讀取的資料改成pkl檔
+
+2. 將欄位中的型態降級
