--- a/Day027/作業.ipynb
+++ b/Day027/作業.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +151,33 @@
    "source": [
     "f'出現 50 次的機率 = {round(probs[50], 5)*100}%'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.07958923738717888\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 這是 bermoulli分配\n",
+    "p = 0.5 # 假設是公平硬幣\n",
+    "n = 100  # 重複實驗 100次,\n",
+    "r = 50 # 計算出現50次正面\n",
+    "\n",
+    "\n",
+    "# 2.計算二項分佈的概率質量分佈 (probability mass function)\n",
+    "# 之所以稱為質量，是因為離散的點\n",
+    "# P(X=x) --> 是機率\n",
+    "probs = stats.binom.pmf(r, n, p)\n",
+    "print(probs)"
+   ]
   }
  ],
  "metadata": {
@@ -173,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.6.8-final"
   }
  },
  "nbformat": 4,
