--- a/Day033/作業.ipynb
+++ b/Day033/作業.ipynb
@@ -16,7 +16,7 @@
     "我們可以宣稱生產線所生產出的產品不良率不相同? (以 0.05 為顯著水準)? \n",
     "\n",
     "\n",
-    "(提示: 透過課程投影片的步驟，需思考 $𝐻_0$、 $𝐻_1$ 的寫法和範例不同唷。)   "
+    "(提示: 透過課程投影片的步驟，需思考 𝐻_0、 𝐻_1 的寫法和範例不同唷。)   "
    ]
   },
   {
@@ -60,32 +60,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(4.834937784152282, 0.9999993340635781)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.99999933\n"
+     ]
     }
    ],
    "source": [
+    "# 左尾檢定\n",
     "A = [75, 30] # 有開信的個數\n",
     "B = [300, 300] #各組實驗總個數\n",
     "\n",
-    "statsmodels.stats.proportion.proportions_ztest(A, B, alternative='smaller')"
+    "z, p = statsmodels.stats.proportion.proportions_ztest(A, B, alternative='smaller')\n",
+    "print('{:.8f}'.format(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00000067\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 右尾檢定\n",
+    "A = [75, 30] # 有開信的個數\n",
+    "B = [300, 300] #各組實驗總個數\n",
+    "\n",
+    "z, p = statsmodels.stats.proportion.proportions_ztest(A, B, alternative='larger')\n",
+    "print('{:.8f}'.format(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00000133\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pa != Pb 需使用雙尾檢定\n",
+    "\n",
+    "A = [75, 30] # 有開信的個數\n",
+    "B = [300, 300] #各組實驗總個數\n",
+    "\n",
+    "z, p = statsmodels.stats.proportion.proportions_ztest(A, B, alternative='two-sided')\n",
+    "print('{:.8f}'.format(p))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "0.99 > 0.05\n"
+    "0.00000133 < 0.05 ＝ 兩條生產線的不良率有顯著差異！\n",
+    "\n",
+    "（搭配左/右尾檢定可以知道：不良率較高的可能性高）"
    ]
   }
  ],
