--- a/Day034/1.談資料科學與探索性分析(EDA)_作業.ipynb
+++ b/Day034/1.談資料科學與探索性分析(EDA)_作業.ipynb
@@ -22,9 +22,25 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Ans: 挑選 Mr./Ms. Right\n",
+    "My Answer: 挑選 Mr./Ms. Right\n",
     "\n",
     "因為很主觀且每個人狀況都不一樣"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Ans: \n",
+    "\n",
+    "A1:挑選 Mr./Ms. right\n",
+    "\n",
+    "A2:因為這樣的問題，比較無法量化，一個\"對的人\"的特質\n",
+    "\n",
+    "比如說道德、善良、孝順等比較抽樣的特徵，不容易量化且每一個人感受程度不同，\n",
+    "\n",
+    "一個問題如果無法有統一量化標準的問題，較無法使用資料科學的方法來輔助決策。"
    ]
   },
   {
