--- a/Day038/作業.ipynb
+++ b/Day038/作業.ipynb
@@ -908,7 +908,7 @@
     "    \n",
     "## Q2: 透過數值法計算  Sex 和 Survived  是否有相關性?\n",
     "* 離散．離散 = 使用 Cramér's V\n",
-    "* Sex 和 Survived 呈現高度相關性 （自由度 = 1, Cramer's phi = 0.5434\n",
+    "* Sex 和 Survived 呈現高度相關性 （自由度 = 1, Cramer's phi = 0.5434)\n",
     "    \n",
     "## Q3: 透過數值法計算  Age 和  Fare 是否有相關性?\n",
     "* 連續．連續 = 使用 Pearson 相關係數\n",
