--- a/Day040/7.特徵選取_作業.ipynb
+++ b/Day040/7.特徵選取_作業.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "array(['C', 'S', 'Q'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,25 +503,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  after removing the cwd from sys.path.\n",
       "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"\n"
+      "  \"\"\"\n",
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
      ]
     },
     {
@@ -563,7 +563,7 @@
        "      <td>0</td>\n",
        "      <td>71.2833</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -573,7 +573,7 @@
        "      <td>0</td>\n",
        "      <td>53.1000</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -583,7 +583,7 @@
        "      <td>0</td>\n",
        "      <td>51.8625</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -593,7 +593,7 @@
        "      <td>1</td>\n",
        "      <td>16.7000</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -603,7 +603,7 @@
        "      <td>0</td>\n",
        "      <td>26.5500</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -623,7 +623,7 @@
        "      <td>1</td>\n",
        "      <td>52.5542</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>872</th>\n",
@@ -633,7 +633,7 @@
        "      <td>0</td>\n",
        "      <td>5.0000</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>879</th>\n",
@@ -643,7 +643,7 @@
        "      <td>1</td>\n",
        "      <td>83.1583</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>887</th>\n",
@@ -653,7 +653,7 @@
        "      <td>0</td>\n",
        "      <td>30.0000</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>889</th>\n",
@@ -663,7 +663,7 @@
        "      <td>0</td>\n",
        "      <td>30.0000</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -672,22 +672,22 @@
       ],
       "text/plain": [
        "     Pclass   Age  SibSp  Parch     Fare  sex_new  embarked_new\n",
-       "1         1  38.0      1      0  71.2833        0             1\n",
-       "3         1  35.0      1      0  53.1000        0             2\n",
-       "6         1  54.0      0      0  51.8625        1             2\n",
-       "10        3   4.0      1      1  16.7000        0             2\n",
-       "11        1  58.0      0      0  26.5500        0             2\n",
+       "1         1  38.0      1      0  71.2833        0             0\n",
+       "3         1  35.0      1      0  53.1000        0             1\n",
+       "6         1  54.0      0      0  51.8625        1             1\n",
+       "10        3   4.0      1      1  16.7000        0             1\n",
+       "11        1  58.0      0      0  26.5500        0             1\n",
        "..      ...   ...    ...    ...      ...      ...           ...\n",
-       "871       1  47.0      1      1  52.5542        0             2\n",
-       "872       1  33.0      0      0   5.0000        1             2\n",
-       "879       1  56.0      0      1  83.1583        0             1\n",
-       "887       1  19.0      0      0  30.0000        0             2\n",
-       "889       1  26.0      0      0  30.0000        1             1\n",
+       "871       1  47.0      1      1  52.5542        0             1\n",
+       "872       1  33.0      0      0   5.0000        1             1\n",
+       "879       1  56.0      0      1  83.1583        0             0\n",
+       "887       1  19.0      0      0  30.0000        0             1\n",
+       "889       1  26.0      0      0  30.0000        1             0\n",
        "\n",
        "[183 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,8 @@
    "source": [
     "#離散要轉換成數值，['Sex', 'Embarked']\n",
     "sex_map = {'male': 1, 'female': 0}\n",
-    "embarked_map = {'C': 1, 'S': 2, 'Q': 3}\n",
+    "# embarked_map = {'C': 1, 'S': 2, 'Q': 3}\n",
+    "embarked_map = {'C': 0, 'S': 1, 'Q': 2}\n",
     "x['sex_new'] = x['Sex'].map(sex_map)\n",
     "x['embarked_new'] = x['Embarked'].map(embarked_map)\n",
     "x = x.loc[:, ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'sex_new', 'embarked_new']]\n",
@@ -704,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
