--- a/Day011_3/14 Homework維元.ipynb
+++ b/Day011_3/14 Homework維元.ipynb
@@ -364,8 +364,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* df2 讀到的是 float\n",
-    "* `na_values=['na', '--']` 這一行的差異"
+    "* 有些欄位資料型態 df2 讀到的是 float，df1 則是 object\n",
+    "    * `na_values=['na', '--']` 這一行的差異\n",
+    "* df2 有將 na 和 -- 當作 NaN 處理，df1 則是原本預設"
    ]
   },
   {
