--- a/Day040/7.特徵選取_作業解答.ipynb
+++ b/Day040/7.特徵選取_作業解答.ipynb
@@ -2,22 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "diiAJQz1OE7J"
+   },
    "source": [
     "## 今天的作業\n",
-    "在鐵達尼資料集中，以 Titanic_train.csv 中，首先將有遺失值的數值刪除，試著將課堂中所學的方法應用上去。\n",
-    "* Q1: 目標變數為 Survived，以 Pclass, Age, SibSp, Parch, Fare, Sex, Embarked 為特徵，試著用今天教授的包裝法，搭配課程所教的 SVC，試著排出其餘特徵的重要性。\n"
+    "在鐵達尼資料集中，以Titanic_train.csv 中，首先將有遺失值的數值刪除，試著將課堂中所學的方法應用上去。\n",
+    "* Q1: 目標變數為 Survived，以 Pclass, Age, SibSp, Parch, Fare,Sex, Embarked 為特徵，試著用今天教授的包裝法，搭配課程所教的 SVC，試著排出其餘特徵的重要性。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 34
     },
-    "colab_type": "code",
     "executionInfo": {
      "elapsed": 1558,
      "status": "ok",
@@ -70,15 +71,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "nTNYylz2OE7Y"
+   },
    "source": [
     "## 讀入資料"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "id": "xItgiGX5OE7Z",
+    "outputId": "9bf39213-f2f7-456f-ea78-8971d3f759ad"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -114,8 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "id": "C7eR6DWsOE7a",
+    "outputId": "983eaf51-89a0-4454-c5e2-cfa0b55e0806"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -146,17 +155,20 @@
     }
    ],
    "source": [
-    "# 1. 產生一個新的變數 Survived_cate ，資料型態傳換成類別型態      \n",
-    "# 2. 把題目中的 Survived 用 Survived_cate 來做分析    \n",
-    "df_train['Survived_cate'] = df_train['Survived']\n",
-    "df_train['Survived_cate'] = df_train['Survived_cate'].astype('object')\n",
+    "#1.產稱一個新的變數 Survived_cate ，資料型態傳換成類別型態      \n",
+    "#2.把題目中的 Survived 用 Survived_cate 來做分析    \n",
+    "df_train['Survived_cate']=df_train['Survived']\n",
+    "df_train['Survived_cate']=df_train['Survived_cate'].astype('object')\n",
     "print(df_train.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "id": "-sQoou-OOE7b",
+    "outputId": "9983e3fc-f5db-48ce-c7f6-b1b2c6b820eb"
+   },
    "outputs": [
     {
      "data": {
@@ -291,10 +303,10 @@
    "source": [
     "#我們先把遺失值刪除\n",
     "## 取出資料後，把遺失值刪除\n",
-    "complete_data = df_train.dropna()\n",
+    "complete_data=df_train.dropna()\n",
     "\n",
     "#排除 Ｎame 當特徵，先刪除每一個人都是獨特的資料，先檢視其他變數\n",
-    "complete_data = complete_data.drop(['Name', 'Ticket', 'PassengerId'], axis=1)\n",
+    "complete_data=complete_data.drop(['Name','Ticket','PassengerId'], axis=1)\n",
     "display(complete_data.head(5))\n",
     "\n",
     "print(complete_data.shape)"
@@ -302,8 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "id": "6o9g_gFgOE7c",
+    "outputId": "753ef329-eb62-4b13-87d2-17d030b7c7b2"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -324,8 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "id": "NjvRw8jaOE7d",
+    "outputId": "0400aceb-560f-4ca1-d060-bde3efc5eaee"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -346,15 +364,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "m1pV-gDXOE7e"
+   },
    "source": [
-    "## 定義 x, y"
+    "## 定義 x,y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "id": "Yg_cukzLOE7e",
+    "outputId": "d9ba6f4b-529e-4653-e25d-bf0a4e0904f9"
+   },
    "outputs": [
     {
      "data": {
@@ -469,43 +492,176 @@
     }
    ],
    "source": [
-    "x = complete_data[['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Sex', 'Embarked']]\n",
-    "y = complete_data['Survived']\n",
+    "x=complete_data[['Pclass', 'Age', 'SibSp', 'Parch', 'Fare','Sex', 'Embarked']]\n",
+    "y=complete_data['Survived']\n",
     "display(x.head(5))\n",
     "display(y.head(5))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "uiH2Nnn-OE7f"
+   },
    "source": [
     "### Q1: 目標變數為 Survived，試著用今天教授的包裝法，搭配課程所教的 SVC，試著排出其餘特徵的重要性!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "id": "MmlunaPsOE7f",
+    "outputId": "845c0576-fbe9-4176-b033-84fd3a9b9680"
+   },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'female', 1: 'male'}\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>0</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>1</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.7000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.5500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['C', 'S', 'Q'], dtype=object)"
+       "    Pclass   Age  SibSp  Parch     Fare  Sex Embarked\n",
+       "1        1  38.0      1      0  71.2833    0        C\n",
+       "3        1  35.0      1      0  53.1000    0        S\n",
+       "6        1  54.0      0      0  51.8625    1        S\n",
+       "10       3   4.0      1      1  16.7000    0        S\n",
+       "11       1  58.0      0      0  26.5500    0        S"
       ]
      },
-     "execution_count": 57,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "x['Embarked'].unique()"
+    "#離散要轉換成數值，['Sex',  'Cabin', 'Embarked']\n",
+    "#Can only use .cat accessor with a 'category' dtype\n",
+    "# .cat.codes ：分類的編碼，用數字表示分類數據\n",
+    "x = x.copy()\n",
+    "c = x.loc[:,'Sex'].astype('category')\n",
+    "d = dict(enumerate(c.cat.categories))\n",
+    "print (d)\n",
+    "x.loc[:,'Sex']=x.loc[:,'Sex'].astype('category').cat.codes # ok\n",
+    "display(x.head(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "id": "gBDswRXoOE7f",
+    "outputId": "6893893c-7689-40f3-a8d8-29fe2cf7c84a"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'C', 1: 'Q', 2: 'S'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = x.loc[:,'Embarked'].astype('category')\n",
+    "d = dict(enumerate(c.cat.categories))\n",
+    "print (d)\n",
+    "x.loc[:,'Embarked']=x.loc[:,'Embarked'].astype('category').cat.codes # ok\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "id": "8wsjqZ1VOE7g",
+    "outputId": "981a9bc5-0182-48e2-d12f-6155ae631df2"
+   },
    "outputs": [
     {
      "data": {
@@ -588,204 +744,73 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>871</th>\n",
-       "      <td>1</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>52.5542</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>872</th>\n",
-       "      <td>1</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>879</th>\n",
-       "      <td>1</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>83.1583</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>887</th>\n",
-       "      <td>1</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30.0000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>889</th>\n",
-       "      <td>1</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30.0000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>183 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Pclass   Age  SibSp  Parch     Fare  Sex  Embarked\n",
-       "1         1  38.0      1      0  71.2833    0         0\n",
-       "3         1  35.0      1      0  53.1000    0         2\n",
-       "6         1  54.0      0      0  51.8625    1         2\n",
-       "10        3   4.0      1      1  16.7000    0         2\n",
-       "11        1  58.0      0      0  26.5500    0         2\n",
-       "..      ...   ...    ...    ...      ...  ...       ...\n",
-       "871       1  47.0      1      1  52.5542    0         2\n",
-       "872       1  33.0      0      0   5.0000    1         2\n",
-       "879       1  56.0      0      1  83.1583    0         0\n",
-       "887       1  19.0      0      0  30.0000    0         2\n",
-       "889       1  26.0      0      0  30.0000    1         0\n",
-       "\n",
-       "[183 rows x 7 columns]"
+       "    Pclass   Age  SibSp  Parch     Fare  Sex  Embarked\n",
+       "1        1  38.0      1      0  71.2833    0         0\n",
+       "3        1  35.0      1      0  53.1000    0         2\n",
+       "6        1  54.0      0      0  51.8625    1         2\n",
+       "10       3   4.0      1      1  16.7000    0         2\n",
+       "11       1  58.0      0      0  26.5500    0         2"
       ]
      },
-     "execution_count": 58,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "#離散要轉換成數值，['Sex', 'Embarked']\n",
-    "# .cat.codes ：分類的編碼，用數字表示分類數據\n",
-    "\n",
-    "x['Sex'] = x['Sex'].astype('category').cat.codes\n",
-    "x['Embarked'] = x['Embarked'].astype('category').cat.codes\n",
-    "\n",
-    "# x = x.loc[:, ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'sex_new', 'embarked_new']]\n",
-    "x"
+    "display(x.head(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "id": "DgBfszYpOE7g",
+    "outputId": "f5f539bf-2a48-47dc-943b-f80c6c30844c"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False False False  True False]\n",
+      "[3 5 4 6 7 1 2]\n",
+      "['Sex']\n"
+     ]
+    }
+   ],
    "source": [
     "#執行 包裝法\n",
-    "estimator = SVC(kernel='linear')\n",
+    "\n",
+    "estimator = SVC(kernel=\"linear\")\n",
     "selector = RFE(estimator, n_features_to_select=1, step=1)\n",
-    "selector = selector.fit(x, y)"
+    "selector = selector.fit(x, y)\n",
+    "## True= selected feature\n",
+    "print(selector.support_)\n",
+    "#Selected (i.e., estimated best) features are assigned rank 1.\n",
+    "ranking=selector.ranking_\n",
+    "print(ranking)\n",
+    "rfe_feature = x.loc[:,selector.support_].columns.tolist()\n",
+    "print(rfe_feature)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Support: [False False False False False  True False]\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "d6b2Sa7jOE7g"
+   },
    "source": [
-    "print('Support:', selector.support_)"
+    "## Pclass-Age-SibSp-Parch-Fare-Sex-Embarked 的依序排序為 [3 5 2 6 7 1 4]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ranking: [3 5 4 6 7 1 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Ranking:', selector.ranking_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RFE_feature: ['Sex']\n"
-     ]
-    }
-   ],
-   "source": [
-    "rfe_feature = x.loc[:, selector.support_].columns.tolist()\n",
-    "print('RFE_feature:', rfe_feature)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Pclass', 3)\n",
-      "('Age', 5)\n",
-      "('SibSp', 4)\n",
-      "('Parch', 6)\n",
-      "('Fare', 7)\n",
-      "('Sex', 1)\n",
-      "('Embarked', 2)\n"
-     ]
-    }
-   ],
-   "source": [
-    "col = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Sex', 'Embarked']\n",
-    "for i in zip(col, selector.ranking_):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "colab": {
-   "name": "Day33.YOLO 細節理解 - 網路輸出的後處理_HW.ipynb",
+   "name": "7.特徵選取_作業解答.ipynb",
    "provenance": []
   },
   "kernelspec": {
